# question_app

./: .gitignore  README.md  log_config.json  manage.sh  pyproject.toml
src/question_app/: app.py  context.py  dependencies.py  logging.py  middlewares.py  models.py  routers.py
src/question_app/services/: __init__.py  agent.py  callback.py  elasticsearch.py  mysql.py  ollama.py  prompt.py  qdrant.py  question.py
src/question_app/services/prompts/: analyze_chunks.txt  analyze_description.txt  analyze_query.txt  generate.txt  generate_second.txt  rewrite.txt  verify_questions.txt
tests/: conftest.py  manual.http  test_services.py
